# fastbrew

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  checklist.md  clippy.toml  deny.toml  readme.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  zizmor.yml
crates/fastbrew/: Cargo.toml
crates/fastbrew-cli/: Cargo.toml
crates/fastbrew-cli/src/: lib.rs
crates/fastbrew-cli/src/commands/: hello.rs  mod.rs
crates/fastbrew-static/: Cargo.toml
crates/fastbrew-static/src/: env_vars.rs
crates/fastbrew/src/: lib.rs
crates/fastbrew/src/commands/: hello.rs  install.rs  mod.rs
crates/fastbrew/src/commands/tools/: install.rs  mod.rs
